changed TelekomSMSTokenProvider to use internal HTTP client